Add Java 8 Compatibility (#11)
Fixes #7